# search_order_api

./: Cargo.toml  README.md  Rocket.toml
migrations/2019-10-03-033926_create_table_user/: up.sql
src/: db.rs  db_mongo.rs  main.rs  schema.rs  user.rs
