[package]
name = "search_api"
version = "0.1.0"
authors = ["alex <alexjavabraz@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.2", features = ["postgres"] }
dotenv = "0.9.0"
r2d2 = "0.8.5"
r2d2-diesel = "1.0.0"
mongodb = "0.4.0"


[replace]
"cookie:0.11.0" = { git = 'https://github.com/alexcrichton/cookie-rs.git', rev = "c59d94e1492f2aa8ce0949335d494322ca25366e" }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]


